--- a/hosting/index.html
+++ b/hosting/index.html
@@ -9,5 +9,6 @@
       <button class="btnSubmit" onclick="generateSass(); return false();">Submit</button>
     </form>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script src="scripts/index.js"></script>
   </body>
 </html>
